refactor: change properties and classes